syntax = "proto3";

package airsettle.airsettle;

option go_package = "github.com/airchains-network/airsettle/x/airsettle/types";

// Msg defines the Msg service.
service Msg {
  rpc AddExecutionLayer (MsgAddExecutionLayer) returns (MsgAddExecutionLayerResponse);
}
message MsgAddExecutionLayer {
  string creator         = 1;
  string verificationKey = 2;
  string chainInfo       = 3;
}

message MsgAddExecutionLayerResponse {
  bool   success = 1;
  string message = 2;
}

